# dn42-rir-statistics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: container.yml
src/dn42_rir_statistics/: __init__.py  cli.py  generator.py  registry.py  repository.py  server.py
tests/: test_generator.py
